@@ -101,6 +101,7 @@ int main(void)
 				}
 				
 				printf("MIDI Device Enumerated.\r\n");
+				LEDs_SetAllLEDs(LEDMASK_USB_READY);
 				USB_HostState = HOST_STATE_Configured;
 				break;
 			case HOST_STATE_Configured:
